# trailbase-test

./: .gitmodules  AGENTS.md  MULTI_SERVER_TESTING.md  README.md
changelog/: 20251205-multi-server-oauth-testing.md  20251205-trailbase-counter-experiment.md  20251205-vault-warning-investigation.md  20251206-auth-token-refresh.md  20251206-background-image-upload.md  20251206-client-typescript-refactoring.md  20251206-duplicate-token-refresh-fix.md  20251206-oauth-client-id-in-config.md  20251209-email-config-generation.md  20251209-pkce-oauth-support.md  20251209-register-endpoint-redirect-configuration.md  20251209-toplevel-readme-generation.md
client/: OAUTH_PROVIDERS_API.md  PKCE_IMPLEMENTATION.md  README.md  REGISTER_ENDPOINT_REDIRECT.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/: app.ts  auth.ts  backgroundImage.ts  config.ts  counter.ts  pkce.ts  state.ts  ui.ts
server/: .gitignore  CONFIGURATION.md  GOOGLE_OAUTH_SETUP.md  OAUTH_REDIRECT_FIX.md  README.md  run-fresh.sh  run.sh
server/template/: README.md  config.textproto.template
server/template/config-generator/: .gitignore  Cargo.toml  README.md  build.rs
server/template/config-generator/src/: main.rs
server/template/migrations/: U1764969753__create_user_counters.sql  U1764979880__create_user_background_images.sql
test/: README.md  test_auth.py
