[package]
name = "config-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "config-generator"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.14"
prost-reflect-build = "0.16"

[dependencies]
prost = "0.14"
prost-reflect = { version = "0.16", features = ["text-format", "derive"] }
lazy_static = "1.4"
